infra/terraform/deploy/clusters/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-sample-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
