infra/terraform/deploy/clusters/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-sample-app
spec:
  rules:
    - host: test.retail-store-sample-app.example.local
